--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,160 +1,477 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+html,
 body {
-width: 100px;
- /* margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 10%;*/
-  font-family: "Open Sans", sans-serif;
-  overflow: hidden;
-	margin: 0;
-	font-size: 12px;
-	background-color: #ccc6c6;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
-.titlediv{ 
-    background-color: #025BC3;
-    margin: 5px;
-    border-radius: 5px;
-    padding-top: 5px;
-} 
-.bodydiv{
-border: 1px solid #025BC3;
-    margin-left: 12px;
-    margin-top: 10px;
-    border-radius: 5px;
-    background-color: #1767C3;
-    height: 105vh;
-    width: 100vw;
-    margin: 1px;
-}
-.middlediv{
-	border: 2px solid #e6e6e8;
-    border-radius: 5px;
-    height: 84% !important;
-    margin: 5px;
-   
-    background-color: #E6E6E8;
-}
-.candidateDiv{
-	width:79%;
-	border: 1px solid #b1aaaa;
-    border-radius: 5px;
-    margin: 5px;
-    height: 43%;
-	float:left;
-	margin-left:8%;
-	padding-top:10px
-}
-.candidateDiv1{
-	width:79%;
-	border: 1px solid #b1aaaa;
-    border-radius: 5px;
-    margin: 5px;
-    height: 50%;
-	float:left;
-	margin-left:8%;
-	padding-top:10px
-}
-select {
-width:200px;
-height:30px;
-}
-.tablediv{
-width:50%;	
-}
-table tr td{
-width:50%;
-border-color: 1px solid #000;
-}
-table tbody tr td{
-border-color: #000;
-}
-label {
-  display: inline-block;
-  width: 100px;
+
+body {
+  background: #fafbfb;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
 
 input {
- /* width: 400px;*/
-  padding: 5px;
-  font-size: 13px;
+  background: transparent;
+  border: 1px solid #313131;
+  border-radius: 0;
+  font-size: 18px;
+  color: #333333;
+  min-height: 40px;
 }
 
-button {
-  font-size: 16px;
-  padding: 5px;
+*,
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none !important;
 }
 
-h1, h2 {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 0px;
-  margin-bottom: 10px;
+input,
+textarea,
+select {
+  box-shadow: none;
+  border: 1px solid #b7c7d0 !important;
+  min-height: 34px;
+  border-radius: 0;
 }
 
-h2 {
-  color: #AAA;
-  font-size: 32px;
+.btn {
+  border-radius: 0;
+  background: #c3f591;
+  border: 1px solid #b6c7d0;
+  padding: 6px 20px;
 }
 
-h3 {
-  font-weight: normal;
-  color: #AAA;
-  font-size: 24px;
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #9FAAC0;
+  font-weight: 200;
 }
 
-.black {
-  color: black;
+input::-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #9FAAC0;
+  font-weight: 200;
 }
 
-#balance {
-  color: black;
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #9FAAC0;
+  font-weight: 200;
 }
 
-.hint {
-  color: #666;
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #9FAAC0;
+  font-weight: 200;
 }
 
-/* Login */
-/*
-.bodycol{
-    margin-left: 0px;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    background-color: #262626;
+
+/* Preloader */
+
+.preloader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.28);
 }
-.hide {
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
+
+.loader {
+  margin: 60px auto;
+  font-size: 5px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.4);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.4);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.4);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+  top: calc(50% - 84px);
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+
+/* App */
+
+.full-container {
+  height: 100%;
+}
+
+.top-cont {
+  text-align: center;
+  position: relative;
+  top: calc(50% - 189px);
+}
+
+.top-cont img {
+  width: 80px;
+}
+
+.top-cont h3 {
+  color: #4376c7;
+  margin: 15px;
+  margin-bottom: 3px;
+}
+
+.top-cont p {
+  color: #6a7a90;
+}
+
+.user-info {
+  float: right;
   display: none;
 }
 
-.show {
+.auth-cont {
+  padding-top: 10px;
+}
+
+.top-cont input {
+  padding: 0 18px;
+  border-radius: 100px;
+  border: 2px solid #808996;
+  min-width: 350px;
+  min-height: 46px;
+  color: #546071;
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.top-cont .btn {
+  display: block;
+  background: #497fd8;
+  min-width: 200px;
+  margin: auto;
+  margin-top: 15px;
+  border-radius: 100px;
+  height: 40px;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 300;
+  padding: 6px;
+  border: 0 !important;
+}
+
+.top-cont .hr {
+  max-width: 30%;
+  margin: auto;
+  margin-top: 23px;
+  margin-bottom: 0;
+  border: 0;
+  border-top: 1px dashed #d3dae4;
+}
+
+#info_cont {
+  max-width: 50%;
+  margin: auto;
+  padding-top: 15px;
+}
+
+#info_cont p {
+  font-size: 13px;
+  color: #808d9e;
+}
+
+.app-body {
+  min-height: 500px;
+  display: none;
+}
+
+.app-footer {
+  min-height: 30px;
+  padding: 10px;
+  background: #f0f3f5;
+  border-top: 1px solid #c2cfd6;
+  display: none;
+}
+
+.card {
+  position: relative;
+  display: block;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid #cfd8dc;
+}
+
+.card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: #eceff1;
+  border-bottom: 1px solid #cfd8dc;
+}
+
+.card-block {
+  padding: 1.25rem;
+}
+
+
+.full-container.auth-success .top-cont {
+  text-align: left;
+  position: relative;
+  top: 0;
+  padding: 0;
+  background: #fff;
+  border-bottom: 1px solid #c2cfd6;
+}
+
+.full-container.auth-success .top-cont .brand-info {
+  display: block;
+  width: 100%;
+  min-height: 60px;
+  padding: 8px 10px;
+}
+
+.full-container.auth-success .top-cont img {
+  float: left;
+  max-width: 45px;
+  margin-top: 5px;
+}
+
+.full-container.auth-success .top-cont h3 {
+  float: left;
+  margin-top: 10px;
+}
+
+.full-container.auth-success .top-cont p {
+  float: left;
+  font-size: 16px;
+  border-left: 1px solid #333;
+  padding-left: 10px;
+  margin-top: 12px;
+}
+
+.full-container.auth-success .top-cont .user-info {
+  float: right;
+  display: block;
+  padding-right: 10px;
+}
+
+.full-container.auth-success .top-cont .user-info p {
+  border: 0;
+  font-size: 15px;
+}
+
+.full-container.auth-success .top-cont .user-info p span {
+  color: #5f6f86;
+  font-weight: 600;
+  margin-right: 8px;
+}
+
+.full-container.auth-success .top-cont .auth-base {
+  min-height: 110px;
+  padding: 8px 10px;
+  border-top: 1px solid #c1cfd6;
+  background: #FFFFFF;
+  display: flex;
+}
+
+.full-container.auth-success .top-cont .auth-cont {
+  float: left;
+  padding: 0;
+  padding-top: 2px;
+}
+
+.full-container.auth-success .auth-cont input {
+  border: 1px solid #b1bfd0;
+  min-width: 350px;
+  min-height: 40px;
+  font-size: 16px;
+}
+
+.full-container.auth-success .auth-cont .btn {
+  min-width: 200px;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.full-container.auth-success .top-cont .auth-base .hr {
+  width: 1px;
+  min-height: 100%;
+  border-top: 0;
+  border-left: 1px solid #c1cfd6;
+  float: left;
+  margin-top: -8px;
+  margin-left: 14px;
+  margin-bottom: -8px;
+}
+
+.full-container.auth-success #info_cont {
+  padding: 0;
+  float: right;
+  max-width: calc(100% - 370px);
+}
+
+.full-container.auth-success #info_cont p {
+  border-left: 0;
+  margin: 0;
+}
+
+.full-container.auth-success .app-body {
+  min-height: calc(100% - 212px);
+  display: block;
+  padding: 20px;
+}
+
+.full-container.auth-success .app-footer {
   display: block;
 }
-.main{
-	width: 530px;
-    margin: 13% auto 0 auto;
+
+/* DivTable */
+.divTable{
+	display: table;
+	width: 100%;
 }
-.wrapper {
-    margin: 5px;
-    padding: 0px 0px 0px 100px;
-    height: 258px;
-    
+.divTableRow {
+	display: table-row;
 }
-.left {
-    float: left;
-    background: url(../images/login/left-side.png);
-    width: 31px;
-    height: 261px;
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
 }
-.middle {
-    float: left;
-    background-image: url(../images/login/middle.png);
-    height: 261px;
-    width: 300px;
+.divTableCell, .divTableHead {
+	border: 1px solid #b8c8d0;
+	display: table-cell;
+  padding: 6px 10px;
+  border-bottom: 0;
 }
-.right {
-    float: left;
-    background: url(../images/login/rigt-side.png);
-    width: 31px;
-    height: 261px;
+.divTableRow:last-child .divTableCell {
+  border-bottom: 1px solid #b8c8d0;
 }
-*/
+.divTableCell:last-child, .divTableHead:last-child {
+  border-left: 0;
+  color: #6c7d90;
+}
+.divTableHeading {
+	background-color: #f3f7f9;
+	display: table-row;
+	font-weight: bold;
+}
+.divTableFoot {
+	background-color: #f3f7f9;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody {
+	display: table-row-group;
+}
+
+.addr-table .divTableRow .divTableCell:first-child {
+  width: 40%;
+}
+
+.conpnay-info .divTableCell:first-child {
+  vertical-align: top;
+  padding-top: 10px;
+}
+
+.conpnay-info img {
+  max-height: 54px;
+  margin-top: 3px;
+}
+
+.conpnay-info p {
+  margin: 9px 5px 2px 0;
+  font-size: 16px;  
+  font-weight: 400;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+.card-block .form-control {
+  border-radius: 0 !important;
+}
+
+.card-block .input-group {
+  position: relative;
+  width: 100%;
+  display: table;
+  border-collapse: separate;
+}
+
+.card-block .input-group select {
+  max-width: calc(100% - 280px);
+  -webkit-appearance: none;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  float: left;
+  box-shadow: none;
+  width: auto;
+}
+
+.card-block .input-group input {
+  width: 200px;
+  margin-left: -1px;
+  box-shadow: none;
+}
+
+.card-block .input-group .btn {
+  margin-left: -1px;
+  min-width: 80px;
+  border-radius: 0;
+  background: rgba(74, 127, 216, 0.29);
+  border: 1px solid #b6c7d0;
+  padding: 6px 20px;
+  color: #235c88;
+  box-shadow: none;
+}
+
+.card-block .help-block {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 0;
+  color: #3482ff;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.card-block .help-block i {
+  margin-right: 6px;
+  color: #68b11f;
+}
+
+.card.voting-status .divTableCell {
+  width: 50% !important;
+}
+
+.card.voting-status .divTableCell:last-child, .card.voting-status .divTableHead:last-child {
+  border-left: 0;
+  color: inherit;
+}
